<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
        style="@style/SignIn_TV"
        android:text="@string/signin_appName" />

        <TextView
             style="@style/SignIn_TV"
             android:layout_marginTop="10dp"
             android:text="@string/signin_titleappName"
        />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_signin_mobile"
            style="@style/SignIn_TIL">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_signin_mobile"
                style="@style/SignIn_ET"
                android:hint="@string/signin_mobileNumber"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_signin_pwd"
            style="@style/SignIn_TIL">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_signin_password"
                style="@style/SignIn_ET"
                android:hint="@string/signin_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            style="@style/SignIn_BT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/signin_signin"/>

        <Button
            style="@style/SignIn_BT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/cardview_dark_background"
            android:text="@string/signin_createAccount"/>
    </LinearLayout>

    </LinearLayout>
</ScrollView>