<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Gaurav on 10/11/16 1:25 PM
  ~ Copyright (c) 2016. All rights reserved
  ~
  ~ Last Modified 9/11/16 7:59 PM
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center">
        <android.support.design.widget.TextInputLayout
            style="@style/SignIn_TIL"
            android:id="@+id/til_signup_mobile">

            <android.support.design.widget.TextInputEditText
                style="@style/SignIn_ET"
                android:id="@+id/et_signup_mobile"
                android:hint="@string/all_hint_mobile"
                android:inputType="number"
                />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            style="@style/SignIn_TIL"
            android:id="@+id/til_signup_pwd">

            <android.support.design.widget.TextInputEditText
                style="@style/SignIn_ET"
                android:id="@+id/et_signup_password"
                android:hint="@string/signup_password"
                android:inputType="textPassword"
                />

        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/fortyEight"
            android:layout_marginTop="@dimen/sixteenDp"
            android:orientation="horizontal"
            android:layout_marginRight="@dimen/sixteenDp"
            android:layout_marginLeft="@dimen/sixteenDp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".45"
                android:id="@+id/tv_signUp"
                android:background="@color/colorAccent"
                android:text="@string/action_sign_in_short"
                style="@style/SignIn_BT"
                />
            <TextView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".45"
                android:id="@+id/tv_login"
                android:background="@color/cardview_dark_background"
                android:text="@string/signup_create_account"
                style="@style/SignIn_BT"
                />
        </LinearLayout>
    </LinearLayout>

</ScrollView>