<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <LinearLayout
        android:id="@+id/ll_view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_user_image"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:alpha="0.5"
            android:background="@color/colorAccent"/>

     </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_firstName"
            style="@style/SignUp_TIL"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/a_signup_userName"
                style="@style/SignUp_ET"
                android:hint="@string/signup_firstName"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_secondName"
            style="@style/SignUp_TIL"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/a_signup_secondName"
                style="@style/SignUp_ET"
                android:hint="@string/signup_lastName"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_email"
            style="@style/SignUp_TIL"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/a_signup_email"
                style="@style/SignUp_ET"
                android:hint="@string/signup_email"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:text="@string/signup_update"/>
    </LinearLayout>

  </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_anchor="@id/ll_view1"
        app:layout_anchorGravity="center_horizontal|bottom" />

</android.support.design.widget.CoordinatorLayout>